<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/vm_strip">

    <TextView
        android:id="@+id/stripName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strip_title"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:textColor="@color/vm_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <Button
                android:id="@+id/btn_mono"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:textColor="@color/vm_text"
                android:text="@string/strip_button_mono"
                android:background="@drawable/button_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="7dp"
                app:autoSizeTextType="uniform"
                android:minWidth="1dp"
                android:minHeight="1dp" />
            <Button
                android:id="@+id/btn_eq"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:textColor="@color/vm_text"
                android:text="@string/strip_button_eq"
                android:background="@drawable/button_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="7dp"
                app:autoSizeTextType="uniform"
                android:layout_marginTop="5dp"
                android:minWidth="1dp"
                android:minHeight="1dp" />
            <Button
                android:id="@+id/btn_mute"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:textColor="@color/vm_text"
                android:text="@string/strip_button_mute"
                android:background="@drawable/button_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="7dp"
                app:autoSizeTextType="uniform"
                android:layout_marginTop="5dp"
                android:minWidth="1dp"
                android:minHeight="1dp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ProgressBar
                android:id="@+id/vumeterL"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progress="100"
                android:progressDrawable="@drawable/progress_drawable_vertical"
                android:paddingVertical="30dp"
                android:layout_marginRight="1dp"
                android:layout_marginEnd="1dp" />
            <ProgressBar
                android:id="@+id/vumeterR"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progress="100"
                android:progressDrawable="@drawable/progress_drawable_vertical"
                android:paddingVertical="30dp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp" />
            <RelativeLayout
                android:id="@+id/gain_fader_value_layout"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:gravity="center">

                <android.widget.VerticalSeekBar
                    android:id="@+id/gain_fader"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:max="720"
                    android:maxWidth="25dp"
                    android:maxHeight="25dp"
                    android:paddingHorizontal="25dp"
                    android:progress="0"
                    android:progressDrawable="@drawable/vertical_seek_bar"
                    android:thumb="@drawable/vertical_seek_bar_thumb"
/>

                <TextView
                    android:id="@+id/gain_fader_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/seek_bar_label"
                    android:text=""
                    android:textColor="@color/vm_text"
                    android:padding="2dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>