<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/vm_strip">

    <TextView
        android:id="@+id/stripName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strip_title"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:textColor="@color/vm_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <it.beppi.knoblibrary.Knob
                android:id="@+id/trebleKnob"
                android:layout_width="61dp"
                android:layout_height="55dp"
                app:kCircularIndicatorColor="@color/vm_knob_handle"
                app:kCircularIndicatorRelativePosition="0.5"
                app:kCircularIndicatorRelativeRadius="0.2"
                app:kDefaultState="120"
                app:kFreeRotation="false"
                app:kIndicatorColor="@color/vm_text"
                app:kIndicatorWidth="0dp"
                app:kKnobCenterRelativeRadius="0"
                app:kKnobRelativeRadius="0"
                app:kMaxAngle="160"
                app:kMinAngle="-160"
                app:kNumberOfStates="241"
                app:kSelectedStateMarkerColor="@color/vm_btn_selected"
                app:kSelectedStateMarkerContinuous="true"
                app:kStateMarkersColor="@color/vm_btn"
                app:kStateMarkersRelativeLength="0.1"
                app:kStateMarkersWidth="0dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Treble"
                    android:textColor="@color/vm_text"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/trebleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/vm_text"
                    android:text="0.0"
                    android:textSize="18sp"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/midText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textColor="@color/vm_text"
                    android:textSize="18sp" />
            </LinearLayout>

            <it.beppi.knoblibrary.Knob
                android:id="@+id/midKnob"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                app:kCircularIndicatorColor="@color/vm_knob_handle"
                app:kCircularIndicatorRelativePosition="0.5"
                app:kCircularIndicatorRelativeRadius="0.2"
                app:kDefaultState="120"
                app:kFreeRotation="false"
                app:kIndicatorColor="@color/vm_text"
                app:kIndicatorWidth="0dp"
                app:kKnobCenterRelativeRadius="0"
                app:kKnobRelativeRadius="0"
                app:kMaxAngle="160"
                app:kMinAngle="-160"
                app:kNumberOfStates="241"
                app:kSelectedStateMarkerColor="@color/vm_btn_selected"
                app:kSelectedStateMarkerContinuous="true"
                app:kStateMarkersColor="@color/vm_btn"
                app:kStateMarkersWidth="0dp"
                app:kStateMarkersRelativeLength="0.1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <it.beppi.knoblibrary.Knob
                android:id="@+id/bassKnob"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                app:kCircularIndicatorColor="@color/vm_knob_handle"
                app:kCircularIndicatorRelativePosition="0.5"
                app:kCircularIndicatorRelativeRadius="0.2"
                app:kDefaultState="120"
                app:kFreeRotation="false"
                app:kIndicatorColor="@color/vm_text"
                app:kIndicatorWidth="0dp"
                app:kKnobCenterRelativeRadius="0"
                app:kKnobRelativeRadius="0"
                app:kMaxAngle="160"
                app:kMinAngle="-160"
                app:kNumberOfStates="241"
                app:kSelectedStateMarkerColor="@color/vm_btn_selected"
                app:kSelectedStateMarkerContinuous="true"
                app:kStateMarkersColor="@color/vm_btn"
                app:kStateMarkersWidth="0dp"
                app:kStateMarkersRelativeLength="0.1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">
                <TextView
                    android:id="@+id/bassText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/vm_text"
                    android:text="0.0"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bass"
                    android:textColor="@color/vm_text"
                    android:textSize="16sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ProgressBar
                android:id="@+id/vumeterL"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progress="100"
                android:progressDrawable="@drawable/progress_drawable_vertical"
                android:paddingVertical="30dp"
                android:layout_marginRight="1dp"
                android:layout_marginEnd="1dp" />
            <ProgressBar
                android:id="@+id/vumeterR"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progress="100"
                android:progressDrawable="@drawable/progress_drawable_vertical"
                android:paddingVertical="30dp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp" />
            <RelativeLayout
                android:id="@+id/gain_fader_value_layout"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:gravity="center">
                <android.widget.VerticalSeekBar
                    android:id="@+id/gain_fader"
                    android:layout_width="50dp"
                    android:maxWidth="25dp"
                    android:maxHeight="25dp"
                    android:paddingHorizontal="25dp"
                    android:layout_height="match_parent"
                    android:max="720"
                    android:progress="0"
                    android:progressDrawable="@drawable/vertical_seek_bar"
                    android:thumb="@drawable/vertical_seek_bar_thumb"
                    android:splitTrack="false"
                    />

                <TextView
                    android:id="@+id/gain_fader_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/seek_bar_label"
                    android:text=""
                    android:textColor="@color/vm_text"
                    android:padding="2dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btn_bus_a1"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:textColor="@color/vm_text"
                android:text="@string/strip_button_a1"
                android:background="@drawable/button_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="7dp"
                app:autoSizeTextType="uniform"
                android:minWidth="1dp"
                android:minHeight="1dp" />
            <Button
                android:id="@+id/btn_bus_a2"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:textColor="@color/vm_text"
                android:text="@string/strip_button_a2"
                android:background="@drawable/button_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="7dp"
                app:autoSizeTextType="uniform"
                android:layout_marginTop="5dp"
                android:minWidth="1dp"
                android:minHeight="1dp" />
            <Button
                android:id="@+id/btn_bus_a3"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:textColor="@color/vm_text"
                android:text="@string/strip_button_a3"
                android:background="@drawable/button_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="7dp"
                app:autoSizeTextType="uniform"
                android:layout_marginTop="5dp"
                android:minWidth="1dp"
                android:minHeight="1dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/btn_bus_b1"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:textColor="@color/vm_text"
                android:text="@string/strip_button_b1"
                android:background="@drawable/button_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="7dp"
                app:autoSizeTextType="uniform"
                android:minWidth="1dp"
                android:minHeight="1dp" />
            <Button
                android:id="@+id/btn_bus_b2"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:textColor="@color/vm_text"
                android:text="@string/strip_button_b2"
                android:background="@drawable/button_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="7dp"
                app:autoSizeTextType="uniform"
                android:layout_marginTop="5dp"
                android:minWidth="1dp"
                android:minHeight="1dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/btn_mono"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:textColor="@color/vm_text"
                android:text="@string/strip_button_mono"
                android:background="@drawable/button_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="7dp"
                app:autoSizeTextType="uniform"
                android:minWidth="1dp"
                android:minHeight="1dp" />
            <Button
                android:id="@+id/btn_solo"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:textColor="@color/vm_text"
                android:text="@string/strip_button_solo"
                android:background="@drawable/button_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="7dp"
                app:autoSizeTextType="uniform"
                android:layout_marginTop="5dp"
                android:minWidth="1dp"
                android:minHeight="1dp" />
            <Button
                android:id="@+id/btn_mute"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:textColor="@color/vm_text"
                android:text="@string/strip_button_mute"
                android:background="@drawable/button_border"
                android:paddingVertical="4dp"
                android:paddingHorizontal="7dp"
                app:autoSizeTextType="uniform"
                android:layout_marginTop="5dp"
                android:minWidth="1dp"
                android:minHeight="1dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>